Add status and kind (not supported yet) to HTTP spans
Signed-off-by: Javier Imbernón <javimb@newrelic.com>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -131,6 +131,9 @@ presetScripts:
               trace_id=df.trace_id,
               span_id=df.span_id,
               parent_span_id=df.parent_span_id,
+              # Status and kind are not supported yet
+              # status=0, # tracepb.Status_STATUS_CODE_UNSET
+              # kind=2, # tracepb.Span_SPAN_KIND_SERVER
               attributes={
                 # NOTE: the integration handles splitting of services.
                 'parent.service.name': df.parent_service,
