Add end_time in New Relic retention scripts.
Signed-off-by: Frederick Ryckbosch <fryckbosch@newrelic.com>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -11,7 +11,7 @@ presetScripts:
 
       import px
 
-      df = px.DataFrame(table='http_events', start_time=px.plugin.start_time)
+      df = px.DataFrame(table='http_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
 
       ns_prefix = df.ctx['namespace'] + '/'
       df.container = df.ctx['container_name']
@@ -75,7 +75,7 @@ presetScripts:
 
       import px
 
-      df = px.DataFrame('http_events', start_time=px.plugin.start_time)
+      df = px.DataFrame('http_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
 
       ns_prefix = df.ctx['namespace'] + '/'
       df.container = df.ctx['container_name']
@@ -150,7 +150,7 @@ presetScripts:
 
       import px
 
-      df = px.DataFrame('jvm_stats', start_time=px.plugin.start_time)
+      df = px.DataFrame('jvm_stats', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
 
       ns_prefix = df.ctx['namespace'] + '/'
       df.container = df.ctx['container_name']
@@ -265,7 +265,7 @@ presetScripts:
 
       import px
 
-      df = px.DataFrame('pgsql_events', start_time=px.plugin.start_time)
+      df = px.DataFrame('pgsql_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
 
       ns_prefix = df.ctx['namespace'] + '/'
       df.container = df.ctx['container_name']
@@ -322,7 +322,7 @@ presetScripts:
 
       import px
 
-      df = px.DataFrame('mysql_events', start_time=px.plugin.start_time)
+      df = px.DataFrame('mysql_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
 
       ns_prefix = df.ctx['namespace'] + '/'
       df.container = df.ctx['container_name']
